#include <iostream>
#include <cstdio>

class Musica
{
public:
    Musica() {}
    virtual ~Musica() {}
};
